Entity classes aangepast en CameraView toegvoegd